; ModuleID = '/home/carl/AnghaBench/linux/drivers/slimbus/extr_core.c_slim_device_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/slimbus/extr_core.c_slim_device_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.slim_device = type { i32 }
%struct.slim_driver = type { i32 (%struct.slim_device.0*)* }
%struct.slim_device.0 = type opaque

@SLIM_DEVICE_STATUS_UP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Failed to get logical address\0A\00", align 1
@EPROBE_DEFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @slim_device_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @slim_device_probe(%struct.device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.slim_device*, align 8
  %5 = alloca %struct.slim_driver*, align 8
  %6 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %3, align 8
  %7 = load %struct.device*, %struct.device** %3, align 8
  %8 = call %struct.slim_device* @to_slim_device(%struct.device* %7)
  store %struct.slim_device* %8, %struct.slim_device** %4, align 8
  %9 = load %struct.device*, %struct.device** %3, align 8
  %10 = getelementptr inbounds %struct.device, %struct.device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.slim_driver* @to_slim_driver(i32 %11)
  store %struct.slim_driver* %12, %struct.slim_driver** %5, align 8
  %13 = load %struct.slim_driver*, %struct.slim_driver** %5, align 8
  %14 = getelementptr inbounds %struct.slim_driver, %struct.slim_driver* %13, i32 0, i32 0
  %15 = load i32 (%struct.slim_device.0*)*, i32 (%struct.slim_device.0*)** %14, align 8
  %16 = load %struct.slim_device*, %struct.slim_device** %4, align 8
  %17 = bitcast %struct.slim_device* %16 to %struct.slim_device.0*
  %18 = call i32 %15(%struct.slim_device.0* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %1
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %2, align 4
  br label %40

23:                                               ; preds = %1
  %24 = load %struct.slim_device*, %struct.slim_device** %4, align 8
  %25 = call i32 @slim_get_logical_addr(%struct.slim_device* %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %23
  %29 = load %struct.slim_device*, %struct.slim_device** %4, align 8
  %30 = load i32, i32* @SLIM_DEVICE_STATUS_UP, align 4
  %31 = call i32 @slim_device_update_status(%struct.slim_device* %29, i32 %30)
  br label %38

32:                                               ; preds = %23
  %33 = load %struct.slim_device*, %struct.slim_device** %4, align 8
  %34 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %33, i32 0, i32 0
  %35 = call i32 @dev_err(i32* %34, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %36 = load i32, i32* @EPROBE_DEFER, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %6, align 4
  br label %38

38:                                               ; preds = %32, %28
  %39 = load i32, i32* %6, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %38, %21
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local %struct.slim_device* @to_slim_device(%struct.device*) #1

declare dso_local %struct.slim_driver* @to_slim_driver(i32) #1

declare dso_local i32 @slim_get_logical_addr(%struct.slim_device*) #1

declare dso_local i32 @slim_device_update_status(%struct.slim_device*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
